# FastIso

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
benchmark_results/: attenuation32_benchmark.csv  attenuation32_benchmark.md  czt_window_benchmark.csv  czt_window_benchmark.md  external_package_benchmark.csv  external_package_benchmark.md  fastiso_overall_assessment.md  fine_structure_benchmark.csv  fine_structure_benchmark.md  fine_structure_clusters.csv  internal_log_table_benchmark.csv  internal_log_table_benchmark.md  large_scale_benchmark.csv  large_scale_benchmark.md  parallel_workers_benchmark.csv  parallel_workers_benchmark.md  phase_modulo_benchmark.csv  phase_modulo_benchmark.md  ultra_scale_benchmark.csv  ultra_scale_benchmark.md  window_audit.csv  window_audit.md
benchmark_results/gaussian_cutoff_auto_final/: phase_modulo_benchmark.csv  phase_modulo_benchmark.md
benchmark_results/gaussian_cutoff_method_selection/: phase_modulo_benchmark.csv  phase_modulo_benchmark.md
benchmark_results/method_selection_stability/: phase_modulo_benchmark.csv  phase_modulo_benchmark.md
benchmark_results/phase_modulo_stability/: phase_modulo_benchmark.csv  (+1 more)
benchmarks/: attenuation32.py  bench_log_table.py  czt_window.py  envipat_peaks.R  external_packages.py  fine_structure.py  internal_matrix.py  large_scale.py  parallel_workers.py  phase_modulo.py  plot_benchmarks.py  ultra_scale.py  window_audit.py
tests/: test_cli.py  test_fast_odd_irfft.py  test_formula.py  test_gui.py  test_isotopes.py  test_log_table.py  test_server.py
tools/: fastiso_gui_entry.py
(+32 files in other folders)
