[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastiso"
version = "0.1.0"
description = "Fast FT-based isotope profile simulation prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.urls]
Repository = "https://github.com/OkKakao/FastIso"
Benchmarks = "https://github.com/OkKakao/FastIso/tree/main/benchmark_results"

[project.optional-dependencies]
dev = [
    "Cython>=3",
    "pytest>=8",
]
bench = [
    "IsoSpecPy>=2.3",
    "brain-isotopic-distribution>=1.5",
    "pyopenms>=3.5",
    "seaborn>=0.13",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastiso = ["isotope_data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
